Fixed problem of overlapping trees

--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 #fib {
 	display: inline-block;
-	width: 15000px;
+	/*width: 15000px;*/
 }
 
 #pell {
 	display: inline-block;
-	width: 15000px;
+	/*width: 15000px;*/
 }
 #trib {
 	display: inline-block;
-	width: 15000px;
+/*	width: 15000px;*/
 }
 
 .fib {
